# WriteSpace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  install-cli.sh  install-man.sh  install-tui.sh  install.sh  uninstall.sh  writespace
.cmake/api/v1/reply/: cache-v2-35bb86649c757ce1d53a.json  cmakeFiles-v1-a007be84572c84fe1c63.json  codemodel-v2-f437cc941aa32884f7fe.json  directory-.-Debug-d72486becd6c70f1c2eb.json  directory-_deps.ftxui-build-Debug-458647a02541fce36d19.json  directory-_deps.ftxui-build.doc-Debug-62df0d1044ecc81689be.json  directory-_deps.ftxui-build.examples-Debug-acdff6066cdcf318778a.json  index-2025-06-11T20-03-26-0664.json  target-component-Debug-c82f4ab87140a8320699.json  target-dom-Debug-30bb418a389c390d93a8.json  target-screen-Debug-8dd4c339e5895494fe4b.json  target-writespace-tui-Debug-2b6dbb7e3933e6e77498.json
00_inbox/: intro.md
01_drafts/: README.md
01_drafts/project1/: index.md
02_templates/: apa.tex  blog.md  cv.tex  ieee.tex  mla.tex  paper.tex  style.css
03_assets/: README.md
04_published/: README.md
docs/: writespace.1  writespace.1.md
src/: main.cpp
